--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -6,12 +6,15 @@
  *
  */
 
+body, caption, th, td, input, textarea, select, option, legend, fieldset,
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
+{
+  font-family: 'Ruluko', sans-serif;
+}
+
 body
 {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -24,6 +27,13 @@ code
 {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+}
+
+.row
+{
+  margin-right: -15px;
+  margin-left: -15px;
+  width: 100%;
 }
 
 a,
