--- a/client/src/style/header.css
+++ b/client/src/style/header.css
@@ -6,6 +6,15 @@
  *
  */
 
+.fixed-top
+{
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  background: white;
+}
+
 #block-header a
 {
   font-size: 6.0em;
