--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -21,20 +21,38 @@ body
   color: black;
   padding: 0;
   background-color: #88B1EF;
+
+  position: relative;
 }
 
-code
+#root
 {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  max-width: 1170px;
+
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .row
 {
-  margin-right: -15px;
-  margin-left: -15px;
   width: 100%;
+  padding-right: -15px;
+  padding-left: -15px;
 }
+
+.container
+{
+  max-width: 1170px;
+
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
 
 a,
 a:link,
