--- a/client/src/style/header.css
+++ b/client/src/style/header.css
@@ -6,13 +6,28 @@
  *
  */
 
+header
+{
+  max-width: 1170px;
+
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .fixed-top
 {
   position: fixed;
+  top: 0;
   right: 0;
   left: 0;
   z-index: 1030;
   background: white;
+}
+
+nav,
+#block-header
+{
+  padding: 0 15px;
 }
 
 #block-header a
