--- a/client/src/style/map.css
+++ b/client/src/style/map.css
@@ -6,10 +6,20 @@
  *
  */
 
-.google-map
+
+#geocalc-map
 {
+  overflow: hidden;
   width: 100%;
-  height: 60vh;
+  height: 30vh;
+}
+
+@media (min-width: 768px)
+{
+  #geocalc-map
+  {
+    height: 60vh;
+  }
 }
 
 .pin
