--- a/client/src/style/components.css
+++ b/client/src/style/components.css
@@ -37,3 +37,61 @@
   padding-top: 0;
 }
 
+
+/*
+  For fetchCalc
+*/
+
+#FetchedData
+{
+  min-height: 130px;
+}
+
+
+/*
+  For CSSTransition in fetchCalc
+*/
+
+
+/* This fires as soon as the element enters the dorm */
+.fetchcalc-list-transition-enter,
+.fetchcalc-list-transition-appear
+{
+  /*We give the list the initial dimension of the list button*/
+  top: 0px;
+  width: 100%;
+  max-height: 100%;
+  color: transparent;
+  background-color: #5a564c;
+}
+
+/* This is where we can add the transition*/
+.fetchcalc-list-transition-enter-active,
+.fetchcalc-list-transition-appear-active
+{
+  top: 0px;
+  width: 100%;
+  max-height: 100%;
+  background-color: white;
+  transition: all 400ms;
+}
+
+/* This fires as soon as the this.state.showList is false */
+.fetchcalc-list-transition-exit
+{
+  top: 0px;
+  width: 100%;
+  max-height: 100%;
+  background-color: #9e8949;
+}
+
+/* fires as element leaves the DOM*/
+.fetchcalc-list-transition-exit-active
+{
+  top: 0px;
+  width: 100%;
+  max-height: 100%;
+  color: transparent;
+  background-color: #5a564c;
+  transition: all 400ms;
+}
