--- a/client/src/style/components.css
+++ b/client/src/style/components.css
@@ -50,48 +50,26 @@
 
 /*
   For CSSTransition in fetchCalc
+  From https://codesandbox.io/s/wy4rnqly2k?from-embed=&file=/src/styles.css
+  and
+  From https://blog.bitsrc.io/animating-reactjs-with-react-transition-group-2af6c87cab0c
 */
 
-
-/* This fires as soon as the element enters the dorm */
 .fetchcalc-list-transition-enter,
 .fetchcalc-list-transition-appear
 {
-  /*We give the list the initial dimension of the list button*/
-  top: 0px;
-  width: 100%;
-  max-height: 100%;
-  color: transparent;
-  background-color: #5a564c;
+  opacity: 0;
 }
 
-/* This is where we can add the transition*/
 .fetchcalc-list-transition-enter-active,
 .fetchcalc-list-transition-appear-active
 {
-  top: 0px;
-  width: 100%;
-  max-height: 100%;
-  background-color: white;
-  transition: all 400ms;
+  opacity: 0.5;
+  transition: opacity 500ms;
 }
 
-/* This fires as soon as the this.state.showList is false */
-.fetchcalc-list-transition-exit
+.fetchcalc-list-transition-enter-done
 {
-  top: 0px;
-  width: 100%;
-  max-height: 100%;
-  background-color: #9e8949;
-}
-
-/* fires as element leaves the DOM*/
-.fetchcalc-list-transition-exit-active
-{
-  top: 0px;
-  width: 100%;
-  max-height: 100%;
-  color: transparent;
-  background-color: #5a564c;
-  transition: all 400ms;
+  opacity: 1.0;
+  transition: opacity 500ms;
 }
