--- a/client/src/style/appMenu.css
+++ b/client/src/style/appMenu.css
@@ -35,8 +35,8 @@
   position: absolute;
   width: 36px;
   height: 30px;
-  right: 36px;
-  top: 36px;
+  right: 18px;
+  top: 18px;
 }
 
 /* Color/shape of burger icon bars */
@@ -61,7 +61,7 @@
 /* General sidebar styles */
 .bm-menu
 {
-  background: #000;
+  background: whitesmoke;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
