Fixed border issue with header which was different from content & footer. Implemented the burger menu.

--- a/client/src/style/appMenu.css
+++ b/client/src/style/appMenu.css
@@ -6,88 +6,40 @@
  *
  */
 
-#page-wrap
-{
-  overflow: auto;
-  top: 45%;
-  position: relative;
-}
-
-.bm-item
-{
-  display: inline-block;
-
-  /* Our sidebar item styling */
-  text-decoration: none;
-  margin-bottom: 10px;
-  color: #d1d1d1;
-  transition: color 0.2s;
-}
-
-.bm-item:hover
-{
-  color: white;
-}
-
-.bm-burger-button
+#appMenu
 {
   position: absolute;
-  width: 36px;
-  height: 30px;
+  /*
+    One less than the burger button so that it will slide up & down behind the button.
+  */
+  z-index: 9;
+
+  width: 175px;
+  padding: 7px;
+  margin: 0;
   right: 18px;
-  top: 18px;
-}
-
-/* Color/shape of burger icon bars */
-.bm-burger-bars
-{
-  background: #373a47;
-}
-
-/* Position and sizing of clickable cross button */
-.bm-cross-button
-{
-  height: 24px;
-  width: 24px;
-}
-
-/* Color/shape of close button cross */
-.bm-cross
-{
-  background: #bdc3c7;
-}
-
-/* General sidebar styles */
-.bm-menu
-{
+  top: 48px;
+  border: 1px groove teal;
+  height: 100px;
   background: whitesmoke;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+
+  /*
+    height + padding + border + top
+    100 + 14 + 2 + 48
+  */
+  transform: translateY(-164px);
+  transition: transform .5s ease-in-out 0s;
+  box-shadow: inset 0 1px 0 rgb(255 255 255);
 }
 
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape
+#appMenu.isActive
 {
-  fill: #373a47;
+  transform: translateY(0px);
 }
 
-/* Wrapper for item list */
-.bm-item-list
+#appMenu .activeLink
 {
-  color: #b8b7ad;
-}
-
-/* Styling of overlay */
-.bm-overlay
-{
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.bm-menu-wrap
-{
-  top: 54px;
-  position: absolute !important;
-  right: 18px !important;
-  height: auto !important;
-  overflow: hidden;
+  font-style: italic;
+  font-weight: bold;
+  color: black;
 }
