--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -29,10 +29,8 @@ body
 {
   max-width: 1170px;
 
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
+  padding: 0;
 }
 
 a,
